[tool.poetry]
name = "blog-db"
version = "0.0.2"
description = "This is a simple API that generates, stores and serves Blog articles summaries."
authors = ["SuperMuel <69467005+SuperMuel@users.noreply.github.com>"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/SuperMuel/blog_db"

[tool.poetry.dependencies]
python = "==3.12.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
motor = "^3.4.0"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
beanie = "^1.26.0"


feedparser = "^6.0.11"
fastapi-utilities = "^0.2.0"

langchain = "^0.2.5"
langchain-anthropic = "^0.1.15"
langsmith = "^0.1.79"
langchain-community = "^0.2.5"
langchain-core = "^0.2.8"
langchainhub = "^0.1.20"

newspaper3k = "^0.2.8"
lxml-html-clean = "^0.1.1"

markdownify = "^0.12.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
